css/style.css
* {
  /* border: red 1px solid;
  box-sizing: border-box;*/
  margin: 0;
  padding: 0;
}

/* COLORS */

:root {
  --color-teal: #00626b;
  /* rgba(0, 98, 107, 1) */

  --color-light-teal: #6fa5ac;
  /* rgba(111, 165, 172, 1) */

  --color-orange: #f3bd72;
  /* rgba(243, 189, 114, 1)  */

  --color-light-orange: #efd2a7;
  /* rgb(239, 210, 167, 1) */

  --color-dark-orange: #cb7835;
  /* rgba(203, 120, 53, 1),*/

  --color-dark-blue: #122533;
  /* rgba(18, 37, 51, 1) */

  --color-off-white: #fff7f0;
  /* rgba(255, 247, 240, 1) */

  /* Spacing and Radii */
  --card-radius: 15px;
  /* x-offset | y-offset | blur | color */
  --shadow: 0 10px 20px rgba(42, 42, 81, 0.2);
}

.lightOrange {
  color: var(--color-light-orange);
}

.orange {
  color: var(--color-orange);
}

.darkOrange {
  color: var(--color-dark-orange);
}

.teal {
  color: var(--color-teal);
}

.darkBlue {
  color: var(--color-dark-blue);
}

/* HEADERS & PARA*/

h1 {
  font-family: "Julius Sans One", sans-serif;
  font-size: clamp(20px, 5vw, 45px);
  font-weight: normal;
  line-height: 1.1;
  max-width: 80%;
  width: 100%;
  margin: 0 auto;
}

h2 {
  font-size: 30px;
}

h3 {
  font-size: 24px;
  font-weight: bolder;
  padding: 0 0 20px 0;
}

h4 {
  font-size: 20px;
  font-weight: 600;
  padding: 0 0 20px 0;
}

.underline {
  text-decoration: underline;
  text-decoration-thickness: 2px;
  text-underline-offset: 4px;
}

.underlineMe:hover {
  text-decoration: underline;
  text-decoration-thickness: 2px;
  text-underline-offset: 4px;
}

/* BUTTONS */

.blueButton {
  display: inline-block;
  background-color: var(--color-teal);
  color: var(--color-off-white);
  border-radius: var(--card-radius);
  padding: 20px;
  margin: 0 10px;
  font-family: "Archivo Narrow";
  font-size: 1.5em;
  border: none;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.blueButton:hover {
  background-color: var(--color-dark-blue);
}

.whiteButton {
  display: inline-block;
  color: var(--color-teal);
  background-color: var(--color-off-white);
  border-radius: var(--card-radius);
  padding: 20px;
  margin: 0 10px;
  font-family: "Archivo Narrow";
  font-size: 1.5em;
  font-weight: 800;
  border: none;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.whiteButton:hover {
  background-color: var(--color-dark-orange);
  color: var(--color-off-white);
}

/* BODY */

body {
  font-family: "Archivo Narrow", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  background-color: var(--color-off-white);
  display: grid;
  color: var(--color-off-white);
  margin: 0;
  padding: 0;
}

.logo {
  max-width: 200px;
}

/* //// HOME PAGE //// */



/* BG ORANGE TRIANGLE FOR OTHER PAGES */

.bg-triangle {
  position: fixed;
  top: 0;
  right: 0;
  width: 60%;
  height: 100vh;
  z-index: -1;
  pointer-events: none;
  background: linear-gradient(250deg, #c87934 50%, transparent 50%);
}

.displayFlexCentered {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.displayFlex {
  display: flex;
}

/* GSAP for Home Page */

.phrase-container {
  display: grid;
  place-items: center;
  text-align: center;
  width: 90%;
  max-width: 550px;
  margin: 0 auto;
  min-height: 90px;
  overflow: visible;
  transform: translateY(-15px);
}

.phrase {
  grid-area: 1 / 1;
  opacity: 0;
  visibility: hidden;
  margin: 0;
  color: var(--color-teal);
}

/* SIDEBAR */

#sidebar {
  background: linear-gradient(
    to right,
    var(--color-teal),
    var(--color-light-teal)
  );
  border-left: 10px solid var(--color-dark-orange);
  top: 0;
  left: 0;
  height: 100vh;
  box-sizing: border-box;
  min-width: 300px;
  flex-shrink: 0;
  display: flex;
  flex-direction: column;
  padding: 20px;
  position: sticky;
  align-self: flex-start;
}

/* NAV */
nav {
  display: flex;
  flex-direction: column;
  text-align: right;
  font-size: 20px;
  font-weight: 600;
}

nav ul li a:hover {
  color: var(--color-light-orange);
}

ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

li {
  padding: 10px 0;
}

a {
  text-decoration: none;
  color: var(--color-off-white);
}

#locationContactText {
  margin-top: auto;
  text-align: right;
}

#locationContactText p {
  padding: 10px 0;
}

.sizeTwentyBold {
  font-size: 20px;
  font-weight: 800;
}

/* MAIN CONTENT */

main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
}

/* HOME PAGE BG TRIANGLE */

main.content-area {
  flex: 1;
  width: auto;
  min-height: 100vh;
  position: relative;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
  background: url('../img/BgTriangles.webp') no-repeat center center / 140%;
  min-height: 100vh;
  z-index: -2;
}


/* ORANGE HOME PAGE CIRCLE */

.circle {

  width: 55vmin; 
  height: 55vmin;
  max-width: 550px;
  max-height: 550px;

  line-height: 1.2;
  aspect-ratio: 1 / 1;
  background-color: var(--color-orange);
  border-radius: 50%;
  padding: 5%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 50px;
  align-items: center;
  text-align: center;
  margin: 0;
  position: relative;
  z-index: 2;
}

.slugline {
  font-size: clamp(20px, 4vw, 30px);
}

/* ///////////// SERVICES PAGE ////////// */

/* PROJECT LEADERSHIP & SERVICES CARD*/

.yellowCirc-card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: relative;

  width: 100%;
  max-width: 724px;
  min-height: 260px;
  border-radius: var(--card-radius);
  background: var(--color-orange);
  overflow: hidden;
  z-index: 1;
  text-align: center;

  padding: 50px;
  margin: 80px;
  box-shadow: var(--shadow);
}
/* ... */

